# schnorr-identification-rs

./: Cargo.toml  LICENSE  README.md
src/: auth_session.rs  lib.rs  prover.rs  verifier.rs
