[package]
name = "schnorr-identification-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"], default-features = false }
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
ark-ec = { version = "0.5.0-alpha.0",  default-features = false }
ark-ff = { version = "0.5.0-alpha.0",  default-features = false }
ark-test-curves = { version = "0.5.0-alpha.0", features = ["secp256k1"],  default-features = false }
bytes = "1.7.2"